src/compiler/parser.output
State 83 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: /* empty */
    3               | statement statement_list

    4 statement: variable_decl
    5          | assignment
    6          | if_statement
    7          | while_statement
    8          | block
    9          | func_definition
   10          | return_statement
   11          | print_statement
   12          | error ';'

   13 block: '{' statement_list '}'

   14 variable_decl: TOK_VAR TOK_ID ';'
   15              | TOK_VAR TOK_ID '=' expression ';'

   16 assignment: TOK_ID '=' expression ';'

   17 if_statement: TOK_IF '(' expression ')' statement
   18             | TOK_IF '(' expression ')' statement TOK_ELSE statement

   19 while_statement: TOK_WHILE '(' expression ')' statement

   20 func_definition: TOK_FUNC TOK_ID '(' ')' block

   21 return_statement: TOK_RETURN expression ';'

   22 print_statement: TOK_PRINT '(' expression ')' ';'

   23 expression: equality

   24 equality: comparison
   25         | comparison TOK_EQ comparison
   26         | comparison TOK_NEQ comparison

   27 comparison: term
   28           | term '<' term
   29           | term '>' term
   30           | term TOK_LE term
   31           | term TOK_GE term

   32 term: factor
   33     | term '+' factor
   34     | term '-' factor

   35 factor: unary
   36       | factor '*' unary
   37       | factor '/' unary

   38 unary: primary
   39      | '-' unary

   40 primary: TOK_NUM
   41        | TOK_ID
   42        | TOK_ID '(' ')'
   43        | '(' expression ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 17 18 19 20 22 42 43
')' (41) 17 18 19 20 22 42 43
'*' (42) 36
'+' (43) 33
'-' (45) 34 39
'/' (47) 37
';' (59) 12 14 15 16 21 22
'<' (60) 28
'=' (61) 15 16
'>' (62) 29
'{' (123) 13
'}' (125) 13
error (256) 12
TOK_NUM (258) 40
TOK_ID (259) 14 15 16 20 41 42
TOK_VAR (260) 14 15
TOK_IF (261) 17 18
TOK_ELSE (262) 18
TOK_WHILE (263) 19
TOK_EQ (264) 25
TOK_NEQ (265) 26
TOK_LE (266) 30
TOK_GE (267) 31
TOK_FUNC (268) 20
TOK_RETURN (269) 21
TOK_PRINT (270) 22


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
program (29)
    on left: 1, on right: 0
statement_list (30)
    on left: 2 3, on right: 1 3 13
statement (31)
    on left: 4 5 6 7 8 9 10 11 12, on right: 3 17 18 19
block (32)
    on left: 13, on right: 8 20
variable_decl (33)
    on left: 14 15, on right: 4
assignment (34)
    on left: 16, on right: 5
if_statement (35)
    on left: 17 18, on right: 6
while_statement (36)
    on left: 19, on right: 7
func_definition (37)
    on left: 20, on right: 9
return_statement (38)
    on left: 21, on right: 10
print_statement (39)
    on left: 22, on right: 11
expression (40)
    on left: 23, on right: 15 16 17 18 19 21 22 43
equality (41)
    on left: 24 25 26, on right: 23
comparison (42)
    on left: 27 28 29 30 31, on right: 24 25 26
term (43)
    on left: 32 33 34, on right: 27 28 29 30 31 33 34
factor (44)
    on left: 35 36 37, on right: 32 33 34 36 37
unary (45)
    on left: 38 39, on right: 35 36 37 39
primary (46)
    on left: 40 41 42 43, on right: 38


state 0

    0 $accept: . program $end

    error       shift, and go to state 1
    TOK_ID      shift, and go to state 2
    TOK_VAR     shift, and go to state 3
    TOK_IF      shift, and go to state 4
    TOK_WHILE   shift, and go to state 5
    TOK_FUNC    shift, and go to state 6
    TOK_RETURN  shift, and go to state 7
    TOK_PRINT   shift, and go to state 8
    '{'         shift, and go to state 9

    $end  reduce using rule 2 (statement_list)

    program           go to state 10
    statement_list    go to state 11
    statement         go to state 12
    block             go to state 13
    variable_decl     go to state 14
    assignment        go to state 15
    if_statement      go to state 16
    while_statement   go to state 17
    func_definition   go to state 18
    return_statement  go to state 19
    print_statement   go to state 20


state 1

   12 statement: error . ';'

    ';'  shift, and go to state 21


state 2

   16 assignment: TOK_ID . '=' expression ';'

    '='  shift, and go to state 22


state 3

   14 variable_decl: TOK_VAR . TOK_ID ';'
   15              | TOK_VAR . TOK_ID '=' expression ';'

    TOK_ID  shift, and go to state 23


state 4

   17 if_statement: TOK_IF . '(' expression ')' statement
   18             | TOK_IF . '(' expression ')' statement TOK_ELSE statement

    '('  shift, and go to state 24


state 5

   19 while_statement: TOK_WHILE . '(' expression ')' statement

    '('  shift, and go to state 25


state 6

   20 func_definition: TOK_FUNC . TOK_ID '(' ')' block

    TOK_ID  shift, and go to state 26


state 7

   21 return_statement: TOK_RETURN . expression ';'

    TOK_NUM  shift, and go to state 27
    TOK_ID   shift, and go to state 28
    '-'      shift, and go to state 29
    '('      shift, and go to state 30

    expression  go to state 31
    equality    go to state 32
    comparison  go to state 33
    term        go to state 34
    factor      go to state 35
    unary       go to state 36
    primary     go to state 37


state 8

   22 print_statement: TOK_PRINT . '(' expression ')' ';'

    '('  shift, and go to state 38


state 9

   13 block: '{' . statement_list '}'

    error       shift, and go to state 1
    TOK_ID      shift, and go to state 2
    TOK_VAR     shift, and go to state 3
    TOK_IF      shift, and go to state 4
    TOK_WHILE   shift, and go to state 5
    TOK_FUNC    shift, and go to state 6
    TOK_RETURN  shift, and go to state 7
    TOK_PRINT   shift, and go to state 8
    '{'         shift, and go to state 9

    '}'  reduce using rule 2 (statement_list)

    statement_list    go to state 39
    statement         go to state 12
    block             go to state 13
    variable_decl     go to state 14
    assignment        go to state 15
    if_statement      go to state 16
    while_statement   go to state 17
    func_definition   go to state 18
    return_statement  go to state 19
    print_statement   go to state 20


state 10

    0 $accept: program . $end

    $end  shift, and go to state 40


state 11

    1 program: statement_list .

    $default  reduce using rule 1 (program)


state 12

    3 statement_list: statement . statement_list

    error       shift, and go to state 1
    TOK_ID      shift, and go to state 2
    TOK_VAR     shift, and go to state 3
    TOK_IF      shift, and go to state 4
    TOK_WHILE   shift, and go to state 5
    TOK_FUNC    shift, and go to state 6
    TOK_RETURN  shift, and go to state 7
    TOK_PRINT   shift, and go to state 8
    '{'         shift, and go to state 9

    $end  reduce using rule 2 (statement_list)
    '}'   reduce using rule 2 (statement_list)

    statement_list    go to state 41
    statement         go to state 12
    block             go to state 13
    variable_decl     go to state 14
    assignment        go to state 15
    if_statement      go to state 16
    while_statement   go to state 17
    func_definition   go to state 18
    return_statement  go to state 19
    print_statement   go to state 20


state 13

    8 statement: block .

    $default  reduce using rule 8 (statement)


state 14

    4 statement: variable_decl .

    $default  reduce using rule 4 (statement)


state 15

    5 statement: assignment .

    $default  reduce using rule 5 (statement)


state 16

    6 statement: if_statement .

    $default  reduce using rule 6 (statement)


state 17

    7 statement: while_statement .

    $default  reduce using rule 7 (statement)


state 18

    9 statement: func_definition .

    $default  reduce using rule 9 (statement)


state 19

   10 statement: return_statement .

    $default  reduce using rule 10 (statement)


state 20

   11 statement: print_statement .

    $default  reduce using rule 11 (statement)


state 21

   12 statement: error ';' .

    $default  reduce using rule 12 (statement)


state 22

   16 assignment: TOK_ID '=' . expression ';'

    TOK_NUM  shift, and go to state 27
    TOK_ID   shift, and go to state 28
    '-'      shift, and go to state 29
    '('      shift, and go to state 30

    expression  go to state 42
    equality    go to state 32
    comparison  go to state 33
    term        go to state 34
    factor      go to state 35
    unary       go to state 36
    primary     go to state 37


state 23

   14 variable_decl: TOK_VAR TOK_ID . ';'
   15              | TOK_VAR TOK_ID . '=' expression ';'

    ';'  shift, and go to state 43
    '='  shift, and go to state 44


state 24

   17 if_statement: TOK_IF '(' . expression ')' statement
   18             | TOK_IF '(' . expression ')' statement TOK_ELSE statement

    TOK_NUM  shift, and go to state 27
    TOK_ID   shift, and go to state 28
    '-'      shift, and go to state 29
    '('      shift, and go to state 30

    expression  go to state 45
    equality    go to state 32
    comparison  go to state 33
    term        go to state 34
    factor      go to state 35
    unary       go to state 36
    primary     go to state 37


state 25

   19 while_statement: TOK_WHILE '(' . expression ')' statement

    TOK_NUM  shift, and go to state 27
    TOK_ID   shift, and go to state 28
    '-'      shift, and go to state 29
    '('      shift, and go to state 30

    expression  go to state 46
    equality    go to state 32
    comparison  go to state 33
    term        go to state 34
    factor      go to state 35
    unary       go to state 36
    primary     go to state 37


state 26

   20 func_definition: TOK_FUNC TOK_ID . '(' ')' block

    '('  shift, and go to state 47


state 27

   40 primary: TOK_NUM .

    $default  reduce using rule 40 (primary)


state 28

   41 primary: TOK_ID .
   42        | TOK_ID . '(' ')'

    '('  shift, and go to state 48

    $default  reduce using rule 41 (primary)


state 29

   39 unary: '-' . unary

    TOK_NUM  shift, and go to state 27
    TOK_ID   shift, and go to state 28
    '-'      shift, and go to state 29
    '('      shift, and go to state 30

    unary    go to state 49
    primary  go to state 37


state 30

   43 primary: '(' . expression ')'

    TOK_NUM  shift, and go to state 27
    TOK_ID   shift, and go to state 28
    '-'      shift, and go to state 29
    '('      shift, and go to state 30

    expression  go to state 50
    equality    go to state 32
    comparison  go to state 33
    term        go to state 34
    factor      go to state 35
    unary       go to state 36
    primary     go to state 37


state 31

   21 return_statement: TOK_RETURN expression . ';'

    ';'  shift, and go to state 51


state 32

   23 expression: equality .

    $default  reduce using rule 23 (expression)


state 33

   24 equality: comparison .
   25         | comparison . TOK_EQ comparison
   26         | comparison . TOK_NEQ comparison

    TOK_EQ   shift, and go to state 52
    TOK_NEQ  shift, and go to state 53

    $default  reduce using rule 24 (equality)


state 34

   27 comparison: term .
   28           | term . '<' term
   29           | term . '>' term
   30           | term . TOK_LE term
   31           | term . TOK_GE term
   33 term: term . '+' factor
   34     | term . '-' factor

    TOK_LE  shift, and go to state 54
    TOK_GE  shift, and go to state 55
    '+'     shift, and go to state 56
    '-'     shift, and go to state 57
    '<'     shift, and go to state 58
    '>'     shift, and go to state 59

    $default  reduce using rule 27 (comparison)


state 35

   32 term: factor .
   36 factor: factor . '*' unary
   37       | factor . '/' unary

    '*'  shift, and go to state 60
    '/'  shift, and go to state 61

    $default  reduce using rule 32 (term)


state 36

   35 factor: unary .

    $default  reduce using rule 35 (factor)


state 37

   38 unary: primary .

    $default  reduce using rule 38 (unary)


state 38

   22 print_statement: TOK_PRINT '(' . expression ')' ';'

    TOK_NUM  shift, and go to state 27
    TOK_ID   shift, and go to state 28
    '-'      shift, and go to state 29
    '('      shift, and go to state 30

    expression  go to state 62
    equality    go to state 32
    comparison  go to state 33
    term        go to state 34
    factor      go to state 35
    unary       go to state 36
    primary     go to state 37


state 39

   13 block: '{' statement_list . '}'

    '}'  shift, and go to state 63


state 40

    0 $accept: program $end .

    $default  accept


state 41

    3 statement_list: statement statement_list .

    $default  reduce using rule 3 (statement_list)


state 42

   16 assignment: TOK_ID '=' expression . ';'

    ';'  shift, and go to state 64


state 43

   14 variable_decl: TOK_VAR TOK_ID ';' .

    $default  reduce using rule 14 (variable_decl)


state 44

   15 variable_decl: TOK_VAR TOK_ID '=' . expression ';'

    TOK_NUM  shift, and go to state 27
    TOK_ID   shift, and go to state 28
    '-'      shift, and go to state 29
    '('      shift, and go to state 30

    expression  go to state 65
    equality    go to state 32
    comparison  go to state 33
    term        go to state 34
    factor      go to state 35
    unary       go to state 36
    primary     go to state 37


state 45

   17 if_statement: TOK_IF '(' expression . ')' statement
   18             | TOK_IF '(' expression . ')' statement TOK_ELSE statement

    ')'  shift, and go to state 66


state 46

   19 while_statement: TOK_WHILE '(' expression . ')' statement

    ')'  shift, and go to state 67


state 47

   20 func_definition: TOK_FUNC TOK_ID '(' . ')' block

    ')'  shift, and go to state 68


state 48

   42 primary: TOK_ID '(' . ')'

    ')'  shift, and go to state 69


state 49

   39 unary: '-' unary .

    $default  reduce using rule 39 (unary)


state 50

   43 primary: '(' expression . ')'

    ')'  shift, and go to state 70


state 51

   21 return_statement: TOK_RETURN expression ';' .

    $default  reduce using rule 21 (return_statement)


state 52

   25 equality: comparison TOK_EQ . comparison

    TOK_NUM  shift, and go to state 27
    TOK_ID   shift, and go to state 28
    '-'      shift, and go to state 29
    '('      shift, and go to state 30

    comparison  go to state 71
    term        go to state 34
    factor      go to state 35
    unary       go to state 36
    primary     go to state 37


state 53

   26 equality: comparison TOK_NEQ . comparison

    TOK_NUM  shift, and go to state 27
    TOK_ID   shift, and go to state 28
    '-'      shift, and go to state 29
    '('      shift, and go to state 30

    comparison  go to state 72
    term        go to state 34
    factor      go to state 35
    unary       go to state 36
    primary     go to state 37


state 54

   30 comparison: term TOK_LE . term

    TOK_NUM  shift, and go to state 27
    TOK_ID   shift, and go to state 28
    '-'      shift, and go to state 29
    '('      shift, and go to state 30

    term     go to state 73
    factor   go to state 35
    unary    go to state 36
    primary  go to state 37


state 55

   31 comparison: term TOK_GE . term

    TOK_NUM  shift, and go to state 27
    TOK_ID   shift, and go to state 28
    '-'      shift, and go to state 29
    '('      shift, and go to state 30

    term     go to state 74
    factor   go to state 35
    unary    go to state 36
    primary  go to state 37


state 56

   33 term: term '+' . factor

    TOK_NUM  shift, and go to state 27
    TOK_ID   shift, and go to state 28
    '-'      shift, and go to state 29
    '('      shift, and go to state 30

    factor   go to state 75
    unary    go to state 36
    primary  go to state 37


state 57

   34 term: term '-' . factor

    TOK_NUM  shift, and go to state 27
    TOK_ID   shift, and go to state 28
    '-'      shift, and go to state 29
    '('      shift, and go to state 30

    factor   go to state 76
    unary    go to state 36
    primary  go to state 37


state 58

   28 comparison: term '<' . term

    TOK_NUM  shift, and go to state 27
    TOK_ID   shift, and go to state 28
    '-'      shift, and go to state 29
    '('      shift, and go to state 30

    term     go to state 77
    factor   go to state 35
    unary    go to state 36
    primary  go to state 37


state 59

   29 comparison: term '>' . term

    TOK_NUM  shift, and go to state 27
    TOK_ID   shift, and go to state 28
    '-'      shift, and go to state 29
    '('      shift, and go to state 30

    term     go to state 78
    factor   go to state 35
    unary    go to state 36
    primary  go to state 37


state 60

   36 factor: factor '*' . unary

    TOK_NUM  shift, and go to state 27
    TOK_ID   shift, and go to state 28
    '-'      shift, and go to state 29
    '('      shift, and go to state 30

    unary    go to state 79
    primary  go to state 37


state 61

   37 factor: factor '/' . unary

    TOK_NUM  shift, and go to state 27
    TOK_ID   shift, and go to state 28
    '-'      shift, and go to state 29
    '('      shift, and go to state 30

    unary    go to state 80
    primary  go to state 37


state 62

   22 print_statement: TOK_PRINT '(' expression . ')' ';'

    ')'  shift, and go to state 81


state 63

   13 block: '{' statement_list '}' .

    $default  reduce using rule 13 (block)


state 64

   16 assignment: TOK_ID '=' expression ';' .

    $default  reduce using rule 16 (assignment)


state 65

   15 variable_decl: TOK_VAR TOK_ID '=' expression . ';'

    ';'  shift, and go to state 82


state 66

   17 if_statement: TOK_IF '(' expression ')' . statement
   18             | TOK_IF '(' expression ')' . statement TOK_ELSE statement

    error       shift, and go to state 1
    TOK_ID      shift, and go to state 2
    TOK_VAR     shift, and go to state 3
    TOK_IF      shift, and go to state 4
    TOK_WHILE   shift, and go to state 5
    TOK_FUNC    shift, and go to state 6
    TOK_RETURN  shift, and go to state 7
    TOK_PRINT   shift, and go to state 8
    '{'         shift, and go to state 9

    statement         go to state 83
    block             go to state 13
    variable_decl     go to state 14
    assignment        go to state 15
    if_statement      go to state 16
    while_statement   go to state 17
    func_definition   go to state 18
    return_statement  go to state 19
    print_statement   go to state 20


state 67

   19 while_statement: TOK_WHILE '(' expression ')' . statement

    error       shift, and go to state 1
    TOK_ID      shift, and go to state 2
    TOK_VAR     shift, and go to state 3
    TOK_IF      shift, and go to state 4
    TOK_WHILE   shift, and go to state 5
    TOK_FUNC    shift, and go to state 6
    TOK_RETURN  shift, and go to state 7
    TOK_PRINT   shift, and go to state 8
    '{'         shift, and go to state 9

    statement         go to state 84
    block             go to state 13
    variable_decl     go to state 14
    assignment        go to state 15
    if_statement      go to state 16
    while_statement   go to state 17
    func_definition   go to state 18
    return_statement  go to state 19
    print_statement   go to state 20


state 68

   20 func_definition: TOK_FUNC TOK_ID '(' ')' . block

    '{'  shift, and go to state 9

    block  go to state 85


state 69

   42 primary: TOK_ID '(' ')' .

    $default  reduce using rule 42 (primary)


state 70

   43 primary: '(' expression ')' .

    $default  reduce using rule 43 (primary)


state 71

   25 equality: comparison TOK_EQ comparison .

    $default  reduce using rule 25 (equality)


state 72

   26 equality: comparison TOK_NEQ comparison .

    $default  reduce using rule 26 (equality)


state 73

   30 comparison: term TOK_LE term .
   33 term: term . '+' factor
   34     | term . '-' factor

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57

    $default  reduce using rule 30 (comparison)


state 74

   31 comparison: term TOK_GE term .
   33 term: term . '+' factor
   34     | term . '-' factor

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57

    $default  reduce using rule 31 (comparison)


state 75

   33 term: term '+' factor .
   36 factor: factor . '*' unary
   37       | factor . '/' unary

    '*'  shift, and go to state 60
    '/'  shift, and go to state 61

    $default  reduce using rule 33 (term)


state 76

   34 term: term '-' factor .
   36 factor: factor . '*' unary
   37       | factor . '/' unary

    '*'  shift, and go to state 60
    '/'  shift, and go to state 61

    $default  reduce using rule 34 (term)


state 77

   28 comparison: term '<' term .
   33 term: term . '+' factor
   34     | term . '-' factor

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57

    $default  reduce using rule 28 (comparison)


state 78

   29 comparison: term '>' term .
   33 term: term . '+' factor
   34     | term . '-' factor

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57

    $default  reduce using rule 29 (comparison)


state 79

   36 factor: factor '*' unary .

    $default  reduce using rule 36 (factor)


state 80

   37 factor: factor '/' unary .

    $default  reduce using rule 37 (factor)


state 81

   22 print_statement: TOK_PRINT '(' expression ')' . ';'

    ';'  shift, and go to state 86


state 82

   15 variable_decl: TOK_VAR TOK_ID '=' expression ';' .

    $default  reduce using rule 15 (variable_decl)


state 83

   17 if_statement: TOK_IF '(' expression ')' statement .
   18             | TOK_IF '(' expression ')' statement . TOK_ELSE statement

    TOK_ELSE  shift, and go to state 87

    TOK_ELSE  [reduce using rule 17 (if_statement)]
    $default  reduce using rule 17 (if_statement)


state 84

   19 while_statement: TOK_WHILE '(' expression ')' statement .

    $default  reduce using rule 19 (while_statement)


state 85

   20 func_definition: TOK_FUNC TOK_ID '(' ')' block .

    $default  reduce using rule 20 (func_definition)


state 86

   22 print_statement: TOK_PRINT '(' expression ')' ';' .

    $default  reduce using rule 22 (print_statement)


state 87

   18 if_statement: TOK_IF '(' expression ')' statement TOK_ELSE . statement

    error       shift, and go to state 1
    TOK_ID      shift, and go to state 2
    TOK_VAR     shift, and go to state 3
    TOK_IF      shift, and go to state 4
    TOK_WHILE   shift, and go to state 5
    TOK_FUNC    shift, and go to state 6
    TOK_RETURN  shift, and go to state 7
    TOK_PRINT   shift, and go to state 8
    '{'         shift, and go to state 9

    statement         go to state 88
    block             go to state 13
    variable_decl     go to state 14
    assignment        go to state 15
    if_statement      go to state 16
    while_statement   go to state 17
    func_definition   go to state 18
    return_statement  go to state 19
    print_statement   go to state 20


state 88

   18 if_statement: TOK_IF '(' expression ')' statement TOK_ELSE statement .

    $default  reduce using rule 18 (if_statement)
